<resources>
    <string name="app_name">Part2poe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_welcome">Welcome</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="tick_tock">TICK TOCK</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="view_password">View Password</string>
    <string name="login">Login</string>
    <string name="menu_maintimelog" />
    <string name="menu_home">Home</string>
    <string name="menu_addtimelog" />
</resources>