<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.example.part2poe.ui.welcome.WelcomeFragment"
        android:label="@string/menu_welcome"
        tools:layout="@layout/fragment_welcome" />

    <action
        android:id="@+id/action_welcomeFragment_to_registerFragment"
        app:destination="@id/nav_register" />

    <action
        android:id="@+id/action_welcomeFragment_to_loginFragment"
        app:destination="@id/nav_login" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.part2poe.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.part2poe.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <action
        android:id="@+id/action_registerFragment_to_loginFragment"
        app:destination="@id/nav_login" />

    <fragment
        android:id="@+id/nav_forgetpassword"
        android:name="com.example.part2poe.ui.forgetpassword.ForgetPasswordFragment"
        android:label="Forget Password"
        tools:layout="@layout/fragment_forgetpassword">

        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="email"
            app:argType="string" />

    </fragment>

    <action
        android:id="@+id/action_loginFragment_to_forgetpasswordFragment"
        app:destination="@id/nav_forgetpassword" />

    <action
        android:id="@+id/action_forgetpasswordFragment_to_loginFragment"
        app:destination="@id/nav_login" >

        <argument
            android:name="newPassword"
            app:argType="string" />

    </action>

    <action
        android:id="@+id/action_loginFragment_to_homeFragment"
        app:destination="@id/nav_home" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.part2poe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <action
        android:id="@+id/action_homeFragment_to_maintimelogFragment"
        app:destination="@id/nav_maintimelog" />

    <fragment
        android:id="@+id/nav_maintimelog"
        android:name="com.example.part2poe.ui.maintimelog.MainTimeLogFragment"
        android:label="@string/menu_maintimelog"
        tools:layout="@layout/fragment_maintimelog" />


    <fragment
        android:id="@+id/nav_addtimelog"
        android:name="com.example.part2poe.ui.addtimelog.AddTimeLogFragment"
        android:label="@string/menu_addtimelog"
        tools:layout="@layout/fragment_addtimelog" />

    <action
        android:id="@+id/action_maintimelogFragment_to_addtimelogFragment"
        app:destination="@id/nav_addtimelog" />


    <fragment
        android:id="@+id/nav_main_category"
        android:name="com.example.part2poe.ui.main_category.MainCategoryFragment"
        android:label="Main Category"
        tools:layout="@layout/fragment_main_category" />

    <action
        android:id="@+id/action_homeFragment_to_main_categoryFragment"
        app:destination="@id/nav_main_category" />



    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.example.part2poe.ui.add_category.AddCategoryFragment"
        android:label="Add New Category"
        tools:layout="@layout/fragment_add_category" />
    <action
        android:id="@+id/action_main_categoryFragment_to_add_categoryFragment"
        app:destination="@id/nav_add_category" />

    <action
        android:id="@+id/action_add_categoryFragment_to_main_categoryFragment"
        app:destination="@id/nav_main_category" />

    <fragment
        android:id="@+id/nav_main_project"
        android:name="com.example.part2poe.ui.main_project.MainProjectFragment"
        android:label="Main Project"
        tools:layout="@layout/fragment_main_project" />

    <action
        android:id="@+id/action_homeFragment_to_main_projectFragment"
        app:destination="@id/nav_main_project" />

    <fragment
        android:id="@+id/nav_add_project"
        android:name="com.example.part2poe.ui.add_project.AddProjectFragment"
        android:label="Add New Project"
        tools:layout="@layout/fragment_add_project" />

    <action
        android:id="@+id/action_main_projectFragment_to_add_projectFragment"
        app:destination="@id/nav_add_project" />

    <action
        android:id="@+id/action_add_projectFragment_to_main_projectFragment"
        app:destination="@id/nav_main_project" />

    <fragment
        android:id="@+id/nav_main_focus_time"
        android:name="com.example.part2poe.ui.main_focus_time.MainFocusTimeFragment"
        android:label="Main Focus Time"
        tools:layout="@layout/fragment_main_focus_time" />

    <action
        android:id="@+id/action_homeFragment_to_main_focus_timeFragment"
        app:destination="@id/nav_main_focus_time" />


    <fragment
        android:id="@+id/nav_add_focus_time"
        android:name="com.example.part2poe.ui.add_focus_time.AddFocusTimeFragment"
        android:label="Add Focus Time"
        tools:layout="@layout/fragment_add_focus_time" />

    <action
        android:id="@+id/action_main_focus_timeFragment_to_add_focus_timeFragment"
        app:destination="@id/nav_add_focus_time" />
</navigation>